--- a/Judo.html
+++ b/Judo.html
@@ -82,7 +82,7 @@
 
   <section id="o-judu">
     <h2>O judu</h2>
-    <p>Judo je japonské bojové umění a olympijský sport. Zaměřuje se na hody, chvaty a práci na zemi. Vzniklo koncem 19. století v Japonsku.</p>
+    <p>Judo je japonské bojové umění a olympijský sport. Zaměřuje se na hody, chvaty a práci na zemi. Judo založil japonec Jigoro Kano roku 1882 v japonsku.</p>
   </section>
 
   <section id="techniky">
@@ -108,7 +108,7 @@
 
   <section id="treningy">
     <h2>Tréninky</h2>
-    <p>Na tréninku se zahříváme, děláme kotouly, techniky a cvičíme s partnerem. Tréninky jsou zábavné a učíme se i disciplíně.</p>
+    <p>Na tréninku posilujeme, děláme judistickou gymnastiku, techniky a cvičíme s partnerem.</p>
   </section>
 
   <section id="moje-cesta">
@@ -119,7 +119,7 @@
   <section id="tipy">
     <h2>Tipy pro začátečníky</h2>
     <ul>
-      <li>Buď trpělivá, každý se zlepšuje postupně.</li>
+      <li>Buď trpělivý/á, každý se zlepšuje postupně.</li>
       <li>Poslouchej trenéra a spolupracuj s partnerem.</li>
       <li>Neboj se chyb, jsou součástí učení.</li>
     </ul>
@@ -134,11 +134,11 @@
 
   <section id="kontakt">
     <h2>O mně</h2>
-    <p>Jmenuji se Lenlea a trénuji judo. Tato stránka je pro všechny, kdo mají rádi bojová umění stejně jako já!</p>
+    <p>Jmenuji se Anna a učím se judo. Tato stránka je pro všechny, kdo mají rádi bojová umění stejně jako já.</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Judo by Lenlea</p>
+    <p>&copy; 2025 Judo by Anna</p>
   </footer>
 </body>
 </html>
