--- a/Judo.html
+++ b/Judo.html
@@ -113,7 +113,7 @@
 
   <section id="moje-cesta">
     <h2>Moje cesta</h2>
-    <p>Tady můžeš napsat, kdy jsi začala s judem, jaké máš zážitky z tréninků nebo soutěží a co tě nejvíc baví.</p>
+    <p>Judo jsem jako malá dělat nechtěla, ale můj táta trval na tom, že kdybych byla v nouzi tak mě to může zachránit. Judo dělám už 4 roky a začalo mě bavit, protože jsem zjistila že mi jde.</p>
   </section>
 
   <section id="tipy">
