--- a/Books.html
+++ b/Books.html
@@ -69,7 +69,15 @@
                 Další část příběhu zde. V každé nové kapitole se mohou opakovat stejné struktury.
             </p>
         </div>
-    </div>
+    
+
+    <div class="content">
+        <div class="book-chapter">
+            <h2>Kapitola 1: Začátek</h2>
+            <p>
+                Zde můžeš vložit text své knihy. Pokračuj ve vkládání kapitol takto, nebo podle potřeby upravuj.
+            </p>
+        </div>
 
     <footer>
         <p>© 2025 Moje Kniha</p>
