--- a/Nature.html
+++ b/Nature.html
@@ -1,71 +1,71 @@
+"use client";
+
+import React from "react";
 import { Button } from "@/components/ui/button";
 import { Sparkles, TreePalm, Droplet } from "lucide-react";
 import { motion } from "framer-motion";
 
 export default function EnvironmentalProtectionPage() {
   return (
-    <main className="min-h-screen bg-gradient-to-br from-lime-200 via-sky-100 to-emerald-100 flex items-center justify-center p-6">
-      <div className="w-full max-w-6xl">
-        <section className="text-center mb-16">
-          <motion.h1
-            className="text-7xl font-extrabold text-emerald-700 drop-shadow-xl mb-4"
-            initial={{ opacity: 0, y: -50 }}
-            animate={{ opacity: 1, y: 0 }}
-            transition={{ duration: 1 }}
-          >
-            Zelená budoucnost
-          </motion.h1>
-          <p className="text-xl text-emerald-600 max-w-2xl mx-auto">
-            Společně můžeme vytvořit krásnější a čistější svět. Začni jedním malým krokem právě dnes.
-          </p>
-        </section>
+    <main className="min-h-screen bg-gradient-to-r from-green-100 via-blue-100 to-teal-200 p-10">
+      <div className="max-w-6xl mx-auto text-center">
+        <motion.h1
+          className="text-5xl font-extrabold text-green-800 mb-6 drop-shadow"
+          initial={{ opacity: 0, y: -30 }}
+          animate={{ opacity: 1, y: 0 }}
+          transition={{ duration: 1 }}
+        >
+          Chraňme naši planetu
+        </motion.h1>
+        <p className="text-xl text-green-700 mb-12">
+          Malými kroky může každý z nás udělat velkou změnu.
+        </p>
 
-        <div className="grid grid-cols-1 md:grid-cols-3 gap-10">
-          <motion.div 
-            className="bg-white rounded-3xl shadow-xl p-8 text-center hover:scale-105 transition-transform"
-            whileHover={{ scale: 1.05 }}
-          >
-            <TreePalm className="w-14 h-14 text-green-600 mx-auto mb-4" />
-            <h2 className="text-2xl font-bold text-green-700 mb-2">Zasaď strom</h2>
-            <p className="text-green-600">
-              Stromy chrání půdu, čistí vzduch a pomáhají přírodě růst. Jeden strom může změnit mnoho.
-            </p>
-          </motion.div>
-
-          <motion.div 
-            className="bg-white rounded-3xl shadow-xl p-8 text-center hover:scale-105 transition-transform"
-            whileHover={{ scale: 1.05 }}
-          >
-            <Droplet className="w-14 h-14 text-sky-600 mx-auto mb-4" />
-            <h2 className="text-2xl font-bold text-sky-700 mb-2">Šetři vodu</h2>
-            <p className="text-sky-600">
-              Voda je vzácná. Uzavírej kohoutky, sbírej dešťovku a chraň vodní zdroje pro budoucnost.
-            </p>
-          </motion.div>
-
-          <motion.div 
-            className="bg-white rounded-3xl shadow-xl p-8 text-center hover:scale-105 transition-transform"
-            whileHover={{ scale: 1.05 }}
-          >
-            <Sparkles className="w-14 h-14 text-yellow-500 mx-auto mb-4" />
-            <h2 className="text-2xl font-bold text-yellow-600 mb-2">Měň svět</h2>
-            <p className="text-yellow-600">
-              Malé činy jako třídění odpadu, bezplastový nákup nebo jízda na kole mají obrovský dopad.
-            </p>
-          </motion.div>
-        </div>
-
-        <div className="text-center mt-20">
+        <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
           <motion.div
-            initial={{ opacity: 0, scale: 0.9 }}
-            whileInView={{ opacity: 1, scale: 1 }}
-            transition={{ duration: 1 }}
+            className="bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition"
+            whileHover={{ scale: 1.05 }}
           >
-            <Button className="bg-emerald-600 hover:bg-emerald-700 text-white text-xl py-5 px-12 rounded-full shadow-lg">
-              Připoj se ke změně 💚
-            </Button>
+            <Leaf className="w-12 h-12 text-green-600 mx-auto mb-4" />
+            <h2 className="text-xl font-bold text-green-800 mb-2">Sázej stromy</h2>
+            <p className="text-green-700">
+              Stromy čistí vzduch, poskytují domov zvířatům a ochlazují klima.
+            </p>
+          </motion.div>
+
+          <motion.div
+            className="bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition"
+            whileHover={{ scale: 1.05 }}
+          >
+            <Globe className="w-12 h-12 text-blue-600 mx-auto mb-4" />
+            <h2 className="text-xl font-bold text-blue-800 mb-2">Mysli globálně</h2>
+            <p className="text-blue-700">
+              Naše činy ovlivňují celý svět. Chovejme se odpovědně.
+            </p>
+          </motion.div>
+
+          <motion.div
+            className="bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition"
+            whileHover={{ scale: 1.05 }}
+          >
+            <Recycle className="w-12 h-12 text-yellow-600 mx-auto mb-4" />
+            <h2 className="text-xl font-bold text-yellow-800 mb-2">Třiď odpad</h2>
+            <p className="text-yellow-700">
+              Recyklací šetříme přírodu a snižujeme množství odpadu.
+            </p>
           </motion.div>
         </div>
+
+        <motion.div
+          className="mt-16"
+          initial={{ opacity: 0, scale: 0.9 }}
+          animate={{ opacity: 1, scale: 1 }}
+          transition={{ duration: 1 }}
+        >
+          <Button className="text-xl bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-full shadow-md">
+            Přidej se k nám 🌍
+          </Button>
+        </motion.div>
       </div>
     </main>
   );
