--- a/had.html
+++ b/had.html
@@ -137,7 +137,7 @@
 
   <div class="container">
     <div class="game-area">
-      <h1>🌌 Vesmírný Had 🚀</h1>
+      <h1> Had </h1>
       <div id="score">Skóre: 0</div>
       <canvas id="gameCanvas" width="400" height="400"></canvas>
       <div>
