přidání Had.html do Index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href="Judo.html">My judo webside</a><br>
 <a href="knihy.html">Mé knihy zdarma k přečtení</a><br>
 <a href="universe.html">The Universe</a><br>
+<a href="Had.html">Hra Had</a><br>
 </body>
 
 </html>
