--- a/Blog.html
+++ b/Blog.html
@@ -1,95 +1,302 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pastelová Webová Stránka</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pastel Blog — Můj krásný blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --pink: #ffd6e8;
-      --blue: #d6ecff;
-      --yellow: #fff6c7;
-      --text: #333;
-      --radius: 20px;
+    :root{
+      --bg-1: #E6F7FF; /* pastel light blue */
+      --bg-2: #FFF0F6; /* pastel light pink */
+      --bg-3: #FFF9E6; /* pastel light yellow */
+      --accent: #9BD3FF;
+      --muted: #6b6b6b;
+      --card: rgba(255,255,255,0.8);
+      --glass: rgba(255,255,255,0.6);
+      --shadow: 0 8px 24px rgba(30,30,30,0.08);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family:Poppins, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      background: linear-gradient(135deg,var(--bg-1) 0%,var(--bg-2) 50%,var(--bg-3) 100%);
+      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+      color:#222; padding:30px;
     }
 
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(160deg, var(--pink), var(--blue), var(--yellow));
-      background-size: 400% 400%;
-      animation: gradientMove 18s ease infinite;
-      color: var(--text);
-    }
+    .container{max-width:1100px;margin:0 auto}
 
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+    header{display:flex;align-items:center;justify-content:space-between;margin-bottom:24px}
+    .brand{display:flex;align-items:center;gap:14px}
+    .logo{width:64px;height:64px;border-radius:18px;background:linear-gradient(145deg,var(--accent),var(--bg-2));box-shadow:var(--shadow);display:flex;align-items:center;justify-content:center;font-weight:700;color:#fff;font-family:Lora;font-size:22px}
+    .title{line-height:1}
+    .site-title{font-family:Lora;font-size:20px;margin:0}
+    .site-sub{font-size:13px;color:var(--muted);margin-top:4px}
 
-    header {
-      width: 100%;
-      padding: 20px 0;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.4);
-      backdrop-filter: blur(10px);
-      border-bottom: 2px solid rgba(0,0,0,0.05);
-    }
+    nav{display:flex;gap:10px;align-items:center}
+    .btn{background:var(--glass);border:1px solid rgba(0,0,0,0.06);padding:8px 12px;border-radius:12px;cursor:pointer;font-weight:600;box-shadow:var(--shadow)}
+    .btn.ghost{background:transparent}
 
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      font-weight: 600;
-    }
+    main{display:grid;grid-template-columns:1fr 360px;gap:24px}
 
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 25px;
-      background: rgba(255, 255, 255, 0.5);
-      border-radius: var(--radius);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    /* Left - posts */
+    .card{background:var(--card);padding:18px;border-radius:16px;box-shadow:var(--shadow);backdrop-filter: blur(6px);}
+    .new-post{display:flex;flex-direction:column;gap:12px}
+    input[type=text], textarea, select{
+      width:100%;padding:10px;border-radius:10px;border:1px solid rgba(0,0,0,0.07);font-size:14px;font-family:inherit
     }
+    textarea{min-height:140px;resize:vertical}
+    .controls{display:flex;gap:8px;flex-wrap:wrap}
 
-    .card {
-      padding: 20px;
-      background: white;
-      border-radius: var(--radius);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      margin-bottom: 20px;
-    }
+    .posts{display:flex;flex-direction:column;gap:14px;margin-top:12px}
+    .post{padding:14px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.85),rgba(255,255,255,0.7));border:1px solid rgba(0,0,0,0.03)}
+    .post h3{margin:0 0 8px 0;font-family:Lora}
+    .meta{font-size:13px;color:var(--muted);display:flex;justify-content:space-between}
+    .post p{margin:10px 0 0 0;line-height:1.45}
 
-    .btn {
-      display: inline-block;
-      padding: 12px 25px;
-      border-radius: var(--radius);
-      background: var(--pink);
-      text-decoration: none;
-      color: var(--text);
-      font-weight: 600;
-      transition: 0.3s;
-    }
+    /* Right - sidebar */
+    .sidebar{display:flex;flex-direction:column;gap:14px}
+    .preset-grid{display:flex;gap:8px}
+    .preset{flex:1;padding:10px;border-radius:10px;cursor:pointer;border:2px solid transparent;text-align:center}
+    .preset span{display:block;font-size:12px;color:var(--muted)}
 
-    .btn:hover {
-      background: var(--yellow);
-      transform: scale(1.05);
-    }
+    footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
+
+    /* responsive */
+    @media (max-width:980px){main{grid-template-columns:1fr} .sidebar{order:2}}
+
+    /* small helpers */
+    .tag{display:inline-block;background:rgba(0,0,0,0.05);padding:4px 8px;border-radius:10px;font-size:12px;margin-right:6px}
+    .actions{display:flex;gap:8px}
+    .muted{color:var(--muted)}
+    .empty{padding:20px;border-radius:12px;text-align:center;color:var(--muted);background:transparent}
   </style>
 </head>
 <body>
-  <header>
-    <h1>Moje Pastelová Stránka</h1>
-  </header>
+  <div class="container">
+    <header>
+      <div class="brand">
+        <div class="logo">PB</div>
+        <div class="title">
+          <h1 class="site-title" contenteditable id="siteTitle">Můj Pastelový Blog</h1>
+          <div class="site-sub" contenteditable id="siteSubtitle">Klikni sem a napiš podtitul — upravuje se okamžitě</div>
+        </div>
+      </div>
+      <nav>
+        <button class="btn" id="downloadBtn">Stáhnout HTML</button>
+        <button class="btn" id="clearBtn">Vymazat vše</button>
+      </nav>
+    </header>
 
-  <main>
-    <div class="card">
-      <h2>Vítej!</h2>
-      <p>Toto je základní pastelový design webové stránky. Můžeš si sem pak doplnit cokoliv — texty, obrázky, menu nebo sekce s příběhy.</p>
-      <a href="#" class="btn">Tlačítko</a>
-    </div>
-  </main>
+    <main>
+      <section>
+        <div class="card">
+          <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;">
+            <h2 style="margin:0;font-family:Lora">Vytvoř nový příspěvek</h2>
+            <div class="muted">Obsah se ukládá do prohlížeče (localStorage)</div>
+          </div>
+
+          <div class="new-post" style="margin-top:12px">
+            <input type="text" id="postTitle" placeholder="Nadpis příspěvku">
+            <input type="text" id="postTags" placeholder="Tagy (oddělené čárkou)">
+            <textarea id="postContent" placeholder="Napiš sem cokoliv — text, odstavce, emoji..." ></textarea>
+            <div class="controls">
+              <button class="btn" id="addPostBtn">Přidat příspěvek</button>
+              <button class="btn ghost" id="previewBtn">Náhled</button>
+              <select id="fontSelect" style="width:auto;padding:8px;border-radius:10px">
+                <option value="Poppins">Font: Poppins</option>
+                <option value="Lora">Font: Lora</option>
+                <option value="serif">Font: Serif</option>
+              </select>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="posts card" id="postsContainer">
+          <!-- posts will render here -->
+        </div>
+      </section>
+
+      <aside class="sidebar">
+        <div class="card">
+          <h3 style="margin-top:0">Barvy / Témy</h3>
+          <div class="preset-grid" style="margin-top:8px">
+            <div class="preset" data-theme="ocean" title="Pastel Ocean" style="background:linear-gradient(135deg,#E6F7FF,#E0F0FF)">
+              <strong>Pastel Ocean</strong>
+              <span>modrá • růžová • žlutá</span>
+            </div>
+            <div class="preset" data-theme="rose" title="Rose Dawn" style="background:linear-gradient(135deg,#FFF0F6,#FFEFF0)">
+              <strong>Rose Dawn</strong>
+              <span>růžová • meruňka</span>
+            </div>
+            <div class="preset" data-theme="sunny" title="Sunny Cream" style="background:linear-gradient(135deg,#FFF9E6,#FFF7D8)">
+              <strong>Sunny Cream</strong>
+              <span>žlutá • světlo</span>
+            </div>
+          </div>
+
+          <div style="margin-top:12px">
+            <label class="muted">Velikost písma</label>
+            <input type="range" id="fontSizeRange" min="14" max="20" value="16">
+          </div>
+        </div>
+
+        <div class="card">
+          <h3 style="margin-top:0">Uložené</h3>
+          <div id="stats" class="muted">Načítám...</div>
+        </div>
+
+        <div class="card">
+          <h3 style="margin-top:0">Rychlé tipy</h3>
+          <ul style="margin:8px 0 0 18px;color:var(--muted)">
+            <li>Klikni na titulky pro editaci</li>
+            <li>Přetvoř barvy témat vlevo</li>
+            <li>Stáhni si HTML pro sdílení</li>
+          </ul>
+        </div>
+      </aside>
+    </main>
+
+    <footer>
+      <div>Created with ❤️ — upravitelné a jednoduché. Ukládá se lokálně v tvém prohlížeči.</div>
+    </footer>
+  </div>
+
+  <script>
+    // --- Utilities & Storage ---
+    const KEY = 'pastel_blog_posts_v1';
+    const META_KEY = 'pastel_blog_meta_v1';
+
+    function uid(){return Date.now().toString(36) + Math.random().toString(36).slice(2,6)}
+
+    function savePosts(posts){localStorage.setItem(KEY, JSON.stringify(posts));renderPosts();updateStats()}
+    function loadPosts(){try{return JSON.parse(localStorage.getItem(KEY) || '[]')}catch(e){return []}}
+
+    function saveMeta(meta){localStorage.setItem(META_KEY, JSON.stringify(meta))}
+    function loadMeta(){try{return JSON.parse(localStorage.getItem(META_KEY) || '{}')}catch(e){return {}}}
+
+    // --- Render ---
+    const postsContainer = document.getElementById('postsContainer');
+    function renderPosts(){
+      const posts = loadPosts().sort((a,b)=>b.created-a.created);
+      postsContainer.innerHTML='';
+      if(!posts.length){postsContainer.innerHTML='<div class="empty card">Zatím žádné příspěvky — napiš svůj první nahoře ✨</div>';return}
+      posts.forEach(p=>{
+        const div = document.createElement('article');div.className='post';
+        const title = document.createElement('h3'); title.textContent = p.title || 'Bez názvu'; title.contentEditable=true; title.addEventListener('input', ()=>{p.title = title.textContent; savePosts(posts)});
+        const meta = document.createElement('div'); meta.className='meta';
+        const left = document.createElement('div'); left.innerHTML = `<small class="muted">${new Date(p.created).toLocaleString()}</small>`;
+        const right = document.createElement('div'); right.className='actions';
+        const editBtn = document.createElement('button'); editBtn.className='btn ghost'; editBtn.textContent='Upravit';
+        const delBtn = document.createElement('button'); delBtn.className='btn ghost'; delBtn.textContent='Smazat';
+        editBtn.onclick = ()=>openEditorFor(p.id);
+        delBtn.onclick = ()=>{if(confirm('Opravdu smazat příspěvek?')){const newPosts = loadPosts().filter(x=>x.id!==p.id);savePosts(newPosts)}}
+        right.append(editBtn, delBtn);
+        meta.append(left,right);
+
+        const body = document.createElement('div'); body.innerHTML = p.content || ''; body.style.marginTop='8px'; body.contentEditable=true;
+        body.addEventListener('input', ()=>{p.content = body.innerHTML; savePosts(posts)});
+
+        const tags = document.createElement('div'); tags.style.marginTop='8px';
+        (p.tags||[]).slice(0,6).forEach(t=>{const s=document.createElement('span');s.className='tag';s.textContent=t;tags.appendChild(s)})
+
+        div.append(title, meta, tags, body);
+        postsContainer.appendChild(div);
+      })
+    }
+
+    // --- Editor actions ---
+    document.getElementById('addPostBtn').addEventListener('click', ()=>{
+      const title = document.getElementById('postTitle').value.trim();
+      const tags = document.getElementById('postTags').value.split(',').map(s=>s.trim()).filter(Boolean);
+      const content = document.getElementById('postContent').value.trim();
+      if(!title && !content){alert('Napiš nadpis nebo obsah.');return}
+      const posts = loadPosts();
+      posts.push({id:uid(),title,content, tags, created:Date.now()});
+      document.getElementById('postTitle').value='';document.getElementById('postTags').value='';document.getElementById('postContent').value='';
+      savePosts(posts);
+    })
+
+    function openEditorFor(id){
+      const posts = loadPosts(); const p = posts.find(x=>x.id===id); if(!p) return; document.getElementById('postTitle').value = p.title || ''; document.getElementById('postTags').value = (p.tags||[]).join(', '); document.getElementById('postContent').value = p.content || '';
+      // on save, replace
+      document.getElementById('addPostBtn').textContent = 'Uložit změny';
+      const handler = ()=>{
+        p.title = document.getElementById('postTitle').value.trim(); p.tags = document.getElementById('postTags').value.split(',').map(s=>s.trim()).filter(Boolean); p.content = document.getElementById('postContent').value.trim();
+        savePosts(posts); document.getElementById('addPostBtn').textContent='Přidat příspěvek'; document.getElementById('addPostBtn').removeEventListener('click', handler);
+        // restore default add handler by reloading
+        location.reload();
+      }
+      document.getElementById('addPostBtn').addEventListener('click', handler);
+    }
+
+    // --- Theme & UI controls ---
+    document.querySelectorAll('.preset').forEach(el=>{
+      el.addEventListener('click', ()=>{
+        const t = el.getAttribute('data-theme'); applyTheme(t);
+        saveMeta(Object.assign(loadMeta(),{theme:t}));
+      })
+    })
+
+    function applyTheme(name){
+      if(name==='rose'){
+        document.documentElement.style.setProperty('--bg-1','#FFEFF6');
+        document.documentElement.style.setProperty('--bg-2','#FFF0F6');
+        document.documentElement.style.setProperty('--bg-3','#FFF7F0');
+        document.documentElement.style.setProperty('--accent','#FFC0D6');
+      }else if(name==='sunny'){
+        document.documentElement.style.setProperty('--bg-1','#FFFDF0');
+        document.documentElement.style.setProperty('--bg-2','#FFF9E6');
+        document.documentElement.style.setProperty('--bg-3','#FFF7D8');
+        document.documentElement.style.setProperty('--accent','#FFE8A1');
+      }else{
+        // ocean (default)
+        document.documentElement.style.setProperty('--bg-1','#E6F7FF');
+        document.documentElement.style.setProperty('--bg-2','#FFF0F6');
+        document.documentElement.style.setProperty('--bg-3','#FFF9E6');
+        document.documentElement.style.setProperty('--accent','#9BD3FF');
+      }
+    }
+
+    document.getElementById('fontSizeRange').addEventListener('input',(e)=>{document.body.style.fontSize = e.target.value + 'px'; saveMeta(Object.assign(loadMeta(),{fontsize:e.target.value}))})
+    document.getElementById('fontSelect').addEventListener('change',(e)=>{document.body.style.fontFamily = e.target.value + ', system-ui'; saveMeta(Object.assign(loadMeta(),{font:e.target.value}))})
+
+    // site title/subtitle autosave
+    const siteTitleEl = document.getElementById('siteTitle'); const siteSubEl = document.getElementById('siteSubtitle');
+    function loadMetaToUI(){const m=loadMeta(); if(m.theme) applyTheme(m.theme); if(m.fontsize) document.body.style.fontSize = m.fontsize + 'px'; if(m.font) document.body.style.fontFamily = m.font + ', system-ui'; if(m.title) siteTitleEl.textContent = m.title; if(m.subtitle) siteSubEl.textContent = m.subtitle;}
+    siteTitleEl.addEventListener('input', ()=>{saveMeta(Object.assign(loadMeta(),{title:siteTitleEl.textContent}))})
+    siteSubEl.addEventListener('input', ()=>{saveMeta(Object.assign(loadMeta(),{subtitle:siteSubEl.textContent}))})
+
+    // download HTML
+    document.getElementById('downloadBtn').addEventListener('click', ()=>{
+      const html = '<!doctype html>\n' + document.documentElement.outerHTML;
+      const blob = new Blob([html], {type:'text/html'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a'); a.href = url; a.download = (siteTitleEl.textContent || 'pastel-blog') + '.html'; document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
+    })
+
+    // clear all
+    document.getElementById('clearBtn').addEventListener('click', ()=>{if(confirm('Opravdu vymazat všechna data?')){localStorage.removeItem(KEY);localStorage.removeItem(META_KEY);location.reload()}})
+
+    // preview opens small window
+    document.getElementById('previewBtn').addEventListener('click', ()=>{
+      const w = window.open('about:blank','_blank');
+      const cloned = document.documentElement.cloneNode(true);
+      // remove script tags for safety
+      cloned.querySelectorAll('script').forEach(s=>s.remove());
+      w.document.open(); w.document.write('<!doctype html>\n'+cloned.outerHTML); w.document.close();
+    })
+
+    function updateStats(){const posts=loadPosts();document.getElementById('stats').textContent = posts.length + ' příspěvků • Poslední: ' + (posts[0]? new Date(posts[0].created).toLocaleString() : '—')}
+
+    // on load
+    (function init(){renderPosts();loadMetaToUI();updateStats();
+      // restore site meta if exists into inputs
+      const meta = loadMeta(); if(meta.font) document.getElementById('fontSelect').value = meta.font; if(meta.fontsize) document.getElementById('fontSizeRange').value = meta.fontsize;
+    })();
+  </script>
 </body>
 </html>
+
