Adding Blog.html to Index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <a href="knihy.html">Mé knihy zdarma k přečtení</a><br>
 <a href="universe.html">The Universe</a><br>
 <a href="Had.html">Hra Had</a><br>
+<a href="Blog.html">Vytvoř si svůj vlastní blog!</a><br>
 </body>
 
 </html>
