--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <h1>Ing. Dromik's Web</h1>
 
 <div class="box">
-    <p>Hello, I am Dromik and this is my web.</p>
+    <p><strong></strong>Hello, I am Dromik and this is my web.</strong></p>
     <p><strong>My pages:</strong></p>
 
     <img src="to-do-list.png" alt="List">
