--- a/index_2.html
+++ b/index_2.html
@@ -73,7 +73,7 @@
 
 <div class="box">
     <p>Hello, I am Dromik and this is my web.</p>
-    <p><strong>My pages:</strong></p>
+    <p><strong>My pages lol:</strong></p>
 
     
 
