--- a/Calendar.html
+++ b/Calendar.html
@@ -20,18 +20,32 @@ body {
     border-radius: 24px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     padding: 20px;
-    max-width: 420px;
+    max-width: 480px;
     width: 100%;
 }
-.calendar h2 {
-    text-align: center;
-    color: #ff6ea8;
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 12px;
 }
+.header button {
+    background: linear-gradient(90deg,#ffd6e8,#dff4ff);
+    border: none;
+    border-radius: 12px;
+    padding: 6px 12px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.header button:hover { transform: scale(1.05); }
+.header h2 { color: #ff6ea8; margin: 0; text-align: center; flex:1; }
+
 .days {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 .days div {
     font-weight: 600;
@@ -48,21 +62,36 @@ body {
     padding: 12px 0;
     border-radius: 12px;
     font-weight: 500;
-    transition: 0.3s;
     cursor: pointer;
+    position: relative;
+    transition: 0.3s;
 }
-.date:hover {
-    transform: scale(1.1);
-}
+.date:hover { transform: scale(1.05); }
 .pastel-pink { background: #ffd6e8; }
 .pastel-blue { background: #dff4ff; }
 .pastel-yellow { background: #fff7c2; }
 .today { border: 2px solid #ff8ac0; font-weight: 700; }
+
+.event {
+    background: #ff8ac0a0;
+    font-size: 10px;
+    padding: 2px 4px;
+    border-radius: 6px;
+    margin-top: 4px;
+    display:block;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
 </style>
 </head>
 <body>
 <div class="calendar">
-    <h2 id="monthYear">Listopad 2025</h2>
+    <div class="header">
+        <button id="prevMonth">⬅</button>
+        <h2 id="monthYear">Listopad 2025</h2>
+        <button id="nextMonth">➡</button>
+    </div>
     <div class="days">
         <div>Po</div><div>Út</div><div>St</div><div>Čt</div><div>Pá</div><div>So</div><div>Ne</div>
     </div>
@@ -73,38 +102,79 @@ body {
 const datesEl = document.getElementById('dates');
 const monthYearEl = document.getElementById('monthYear');
 
-const today = new Date();
-const month = today.getMonth();
-const year = today.getFullYear();
+let today = new Date();
+let currentMonth = today.getMonth();
+let currentYear = today.getFullYear();
 
-// názvy měsíců
 const months = ["Leden","Únor","Březen","Duben","Květen","Červen","Červenec","Srpen","Září","Říjen","Listopad","Prosinec"];
-monthYearEl.textContent = `${months[month]} ${year}`;
 
-// počet dní v měsíci a první den
-const firstDay = new Date(year, month, 1).getDay(); // 0 = neděle
-const daysInMonth = new Date(year, month+1,0).getDate();
+// uložiště událostí
+let events = JSON.parse(localStorage.getItem('events')) || {};
 
-// přizpůsobíme aby pondělí = 0
-const shift = (firstDay+6)%7;
+function renderCalendar(month, year) {
+    datesEl.innerHTML = '';
+    monthYearEl.textContent = `${months[month]} ${year}`;
+    const firstDay = new Date(year, month, 1).getDay();
+    const shift = (firstDay+6)%7;
+    const daysInMonth = new Date(year, month+1,0).getDate();
 
-// generování kalendáře
-for(let i=0;i<shift;i++){
-    const empty = document.createElement('div');
-    datesEl.appendChild(empty);
+    // prázdná místa
+    for(let i=0;i<shift;i++){
+        const empty = document.createElement('div');
+        datesEl.appendChild(empty);
+    }
+    for(let i=1;i<=daysInMonth;i++){
+        const dateDiv = document.createElement('div');
+        dateDiv.textContent = i;
+        dateDiv.classList.add('date');
+        // pastelové barvy
+        if(i%3===1) dateDiv.classList.add('pastel-pink');
+        else if(i%3===2) dateDiv.classList.add('pastel-blue');
+        else dateDiv.classList.add('pastel-yellow');
+
+        // dnešní den
+        if(i===today.getDate() && month===today.getMonth() && year===today.getFullYear()) dateDiv.classList.add('today');
+
+        // přidání existujících událostí
+        const key = `${year}-${month+1}-${i}`;
+        if(events[key]){
+            events[key].forEach(ev=>{
+                const evDiv = document.createElement('span');
+                evDiv.classList.add('event');
+                evDiv.textContent = ev;
+                dateDiv.appendChild(evDiv);
+            });
+        }
+
+        // kliknutí na den → přidat událost
+        dateDiv.addEventListener('click',()=>{
+            const eventText = prompt("Napiš událost pro tento den:");
+            if(eventText){
+                if(!events[key]) events[key]=[];
+                events[key].push(eventText);
+                localStorage.setItem('events', JSON.stringify(events));
+                renderCalendar(currentMonth,currentYear);
+            }
+        });
+
+        datesEl.appendChild(dateDiv);
+    }
 }
-for(let i=1;i<=daysInMonth;i++){
-    const dateDiv = document.createElement('div');
-    dateDiv.textContent = i;
-    dateDiv.classList.add('date');
-    // pastelové barvy střídavě
-    if(i%3===1) dateDiv.classList.add('pastel-pink');
-    else if(i%3===2) dateDiv.classList.add('pastel-blue');
-    else dateDiv.classList.add('pastel-yellow');
-    // dnešní den
-    if(i===today.getDate()) dateDiv.classList.add('today');
-    datesEl.appendChild(dateDiv);
-}
+
+// tlačítka přepínání
+document.getElementById('prevMonth').addEventListener('click',()=>{
+    currentMonth--;
+    if(currentMonth<0){ currentMonth=11; currentYear--; }
+    renderCalendar(currentMonth,currentYear);
+});
+document.getElementById('nextMonth').addEventListener('click',()=>{
+    currentMonth++;
+    if(currentMonth>11){ currentMonth=0; currentYear++; }
+    renderCalendar(currentMonth,currentYear);
+});
+
+renderCalendar(currentMonth,currentYear);
 </script>
 </body>
 </html>
+
